CHANGELOG
- new navigate through poses navigator
- abstract out this logic to allow for expansion (but not plugins)
- create a new onComplete callback in the bt action server to populate results meaningfully or indicate completion
- make sure only 1 navigator at a time can be processed with a muxer handled for plugins automatically

